@@ -54,6 +54,7 @@ import javax.annotation.Nullable;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
@@ -118,7 +119,7 @@ public class LanceTieringTest {
                             }
                         }
                         : Collections.singletonMap(null, null);
-        List<String> partitionKeys = isPartitioned ? List.of("c3") : null;
+        List<String> partitionKeys = isPartitioned ? Arrays.asList("c3") : null;
         Map<TableBucket, Long> tableBucketOffsets = new HashMap<>();
         // first, write data
         for (int bucket = 0; bucket < bucketNum; bucket++) {
